test/good/basic/cond06.px

print true ? true ? 1 : 2 : 3
print false ? true ? 1 : 2 : 3
print true ? false ? 1 : 2 : 3
