test/bad/basic/cond2.px

true ? 3 : false ? '3' : '3'
